# robotic-manipulators

./: README.md
Other Code/catkin_ws_group10/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
Other Code/catkin_ws_group11/devel/: .catkin
Other Code/catkin_ws_group3/devel/: .catkin  .rosinstall  setup.sh
Other Code/catkin_ws_group8/: contributors.txt
Other Code/catkin_ws_group8/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
Other Code/catkin_ws_group9/devel/: .catkin  _setup_util.py  setup.sh
Other Code/group9_catkin_ws/Otherdoc/: CMakeLists.txt  hsvfilter.cpp
Other Code/group9_catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
src/blobexample/: CMakeLists.txt  package.xml
src/blobexample/src/: blob.cpp
src/checkerBoardPoseCalculate/: manifest.xml  package.xml
src/checkerBoardPoseCalculate/launch/: lab_camera.launch  lab_camera.yaml  sid_laptop_camera.launch  sid_laptop_camera.yaml
src/checkerBoardPoseCalculate/msg/: checkerBoardPose.msg
src/checkerBoardPoseCalculate2/: CMakeLists.txt
src/checkerBoardPoseCalculate2/launch/: lab_camera.launch  sid_laptop_camera.launch
src/checkerBoardPoseCalculate2/src/: main.cpp
src/sampleCodeME547/: CMakeLists.txt  manifest.xml  package.xml
src/sampleCodeME5472/src/: matrixManipulationSample.cpp
src/serialConnectA255/: CMakeLists.txt  package.xml
src/serialConnectA255/src/: main.cpp  main_3.cpp  main_old.cpp  main_old2.cpp  main_rev1.cpp
src/serialConnectA2552/: CMakeLists.txt  manifest.xml
src/serialConnectA2552/launch/: serialConnectA255.launch
src/video_stream_opencv/: CMakeLists.txt
src/video_stream_opencv/src/: BlobDetection.cpp  hough.cpp  hough2.cpp  hough_1.cpp  hough_old3.cpp  hough_old_2.cpp  hough_san(1).cpp  main.cpp  my_publisher_simple.cpp  my_subscriber.cpp  simpleCanny.cpp  squares.cpp  video_capture.cpp
(+68 files in other folders)
